syntax = "proto3";

package streaming.v1;

option go_package = "github.com/Brijeshlakkad/api/streaming_v1";

service Streaming {
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
    rpc ProduceStream(stream ProduceRequest) returns (ProduceResponse) {}
}

message ConsumeRequest {
    string point = 1;
}

message ConsumeResponse {
    bytes frame = 1;
}

message ProduceRequest {
    string point = 1;
    bytes frame = 3;
}

message ProduceResponse {
    uint64 offset = 1;
}